security/opa/constraints/container-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: psp-capabilities
spec:
  match:
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - prometheus
            - alertmanager
        - key: k8s-app
          operator: NotIn
          values:
            - cilium
            - cilium-node-init
            - kube-dns
        - key: app
          operator: NotIn
          values:
            - gatekeeper
            - nginx-ingress-nginx-ingress
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
          - DaemonSet
    excludedNamespaces: []
      #- kube-system
      #- ingress
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities: []
    exemptImages: []
