security/opa/constraints/container-requests.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRequests
metadata:
  name: container-requests
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - lok
  parameters:
    cpu: "1000m"
    memory: "1024Mi"
    exemptImages: []
