security/opa/constraints/privilege-escalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-privilege-escalation
spec:
  match:
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - falco
        - key: app
          operator: NotIn
          values:
            - filebeat-filebeat
        - key: app
          operator: NotIn
          values:
            - nginx-ingress-nginx-ingress
    kinds:
      - apiGroups: [""]
        kinds: 
          - Pod
          - DaemonSet
    excludedNamespaces: []
      #- kube-system
      #- argocd
      #- ingress
      #- monitoring
      #- security
  parameters:
    exemptImages: []
