security/opa/constraints/privileged-container.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
spec:
  match:
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - falco
        - key: app.kubernetes.io/component
          operator: NotIn
          values:
            - csi-driver
        - key: k8s-app
          operator: NotIn
          values:
            - kube-proxy
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
          - DaemonSet
    excludedNamespaces: []
