security/opa/constraints/required-probes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: psp-required-probes
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - lok
  parameters:
    probeTypes:
      - tcpSocket
      - httpGet
      - exec
    probes:
      - readinessProbe
      - livenessProbe
